# GosuParticleEngine

./: .gitignore  CMakeLists.txt  README.md
example/: game_window.cpp  game_window.hpp  main.cpp
src/: Particle.cpp  Particle.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  fast_math.cpp  fast_math.hpp
